# cdfr

./: .clang-format  .gitignore  .gitmodules  Readme.md  Vagrantfile  asterix.vars  obelix.vars  ros_ws.repos  setup.bash  setup.md  webots_ros2.patch
docs/: Bluetooth.md  Coding.md  (+2 more)
src/assurancetourix/: map.yml  package.xml  setup.py
src/assurancetourix/assurancetourix/: CMakeLists.txt  Readme.md  package.xml  setup.cfg  setup.py
src/assurancetourix/assurancetourix/assurancetourix/: led_indicators.py  main.py
src/assurancetourix/assurancetourix/components/: camera.py  projector.py
src/assurancetourix/assurancetourix/include/: arducam_mipicamera.hpp  assurancetourix.hpp  geometrix.hpp
src/assurancetourix/assurancetourix/launch/: launch.py  launch_external.py
src/assurancetourix/assurancetourix/map/: map.py  map.yml
src/assurancetourix/assurancetourix/param/: assurancetourix.yml
src/assurancetourix/assurancetourix/src/: assurancetourix.cpp  assurancetourix_node.cpp  geometrix.cpp
src/assurancetourix/assurancetourix_msg/: CMakeLists.txt  package.xml
src/assurancetourix/assurancetourix_msg/assurancetourix_msg/: CMakeLists.txt  package.xml
src/assurancetourix/assurancetourix_msg/msg/: AssurancetourixMsg.msg
src/assurancetourix/gradient_costmap_layer/: CMakeLists.txt  gradient_layer.xml
src/assurancetourix/gradient_costmap_layer/src/: gradient_layer.cpp
src/assurancetourix/launch/: launch.py
src/assurancetourix/lh_enemies_tracker/: package.xml  setup.cfg  setup.py
src/assurancetourix/lh_enemies_tracker/lh_enemies_tracker/: constants.py  lh_enemies_tracker_node.py  lh_geometry.py
src/assurancetourix/lh_enemies_tracker/param/: lh_enemies_tracker.yml
src/assurancetourix/lh_tracker_msgs/: CMakeLists.txt  package.xml
src/assurancetourix/lh_tracker_msgs/msg/: LHtracker.msg
src/assurancetourix/map/: server.yml
src/assurancetourix/strategix/: package.xml  setup.cfg  setup.py
src/assurancetourix/strategix/srv/: StrategixSrv.srv
src/assurancetourix/strategix/strategix/: actions.py  exceptions.py  score.py  strategix.py  strategy_modes.py
src/assurancetourix/strategix_msgs/: CMakeLists.txt  package.xml
src/assurancetourix/strategix_msgs/action/: StrategixAction.action
src/assurancetourix/strategix_msgs/srv/: ChangeActionStatus.srv  GetAvailableActions.srv
src/assurancetourix/transformix/transformix/: CMakeLists.txt  package.xml
src/assurancetourix/transformix/transformixServer/: CMakeLists.txt  package.xml
src/assurancetourix/transformix/transformix_msgs/: CMakeLists.txt  package.xml
src/assurancetourix/transformix/transformix_services/: CMakeLists.txt  package.xml
src/assurancetourix/webots_positions/: package.xml  setup.cfg  setup.py
src/assurancetourix/webots_positions/webots_positions/: webots_positions.py
src/asterix/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/asterix/asterix/: main.py
src/asterix/launch/: interfaces.py  launch.py  nav-core.py  rviz2.py  simulation-interfaces.py
src/asterix/param/: asterix.in.yml  asterix.yml
src/asterix/robot/: Asterix.proto  Couleurs.urdf  asterix.urdf
src/manual_command/: package.xml  setup.cfg  setup.py
src/manual_command/manual_command/: manual_command_node.py
src/modules/actuators/: package.xml  setup.py
src/modules/actuators/actuators/: actuators.py  asterix.py  obelix.py  package.xml  setup.py
src/modules/actuators/actuators_msgs/: CMakeLists.txt  package.xml
src/modules/actuators_srvs/: CMakeLists.txt  package.xml
src/modules/actuators_srvs/srv/: Slider.srv
src/modules/cetautomatix/: package.xml  selftest.md  setup.cfg  setup.py
src/modules/cetautomatix/cetautomatix/: actions.py  client.py  custom_behaviours.py  magic_points.py  main.py  new_robot.py  old_robot.py  plot.py  robot.py  selftest.py  strategy_modes.py  subscriber.py  tf2_geometry_msgs.py  tree.py
src/modules/drive/: CMakeLists.txt  Readme.md  package.xml
src/modules/drive/include/: ODrive.hpp  drive.hpp  speedramp.hpp
src/modules/drive/param/: asterix.yml
src/modules/drive/src/: ODrive.cpp  drive.cpp  drive_node.cpp  i2c.cpp
src/modules/i2c/: CMakeLists.txt  package.xml
src/modules/i2c/include/: i2c.hpp
src/modules/i2c/src/: i2c.cpp
src/modules/localisation/: README.md  package.xml  setup.cfg  setup.py
src/modules/localisation/lh_tracker_serial/: lh_tracker_serial_node.py  pulse_data.py
src/modules/localisation/localisation/: lh_geometry.py  lh_tracker_geometry.py  localisation_node.py  sensors.py  sensors_sim.py  utils.py  vlx_readjustement.py  vlx_readjustment.py
src/modules/map/: CMakeLists.txt  package.xml
src/modules/map/map/: map.py  map.yml
src/modules/mbridge/: package.xml  setup.py
src/modules/mbridge/mbridge/: mbridge.py  sensors.py
src/modules/odometry/: CMakeLists.txt  package.xml  setup.py
src/modules/odometry/src/: odometry.cpp
src/modules/onboard_vision/: CMakeLists.txt  Readme.md  package.xml  poc.py  setup.cfg  setup.py
src/modules/onboard_vision/include/: onboard_vision.hpp
src/modules/onboard_vision/onboard_vision/: onboard_vision.py
src/modules/onboard_vision/src/: onboard_vision.cpp  onboard_vision_node.cpp
src/modules/robot/: CMakeLists.txt  package.xml  setup.py
src/modules/robot/behavior_trees/: navigate_w_replanning_time.xml
src/modules/robot/launch/: launch.py
src/modules/robot_nav/: CMakeLists.txt  package.xml
src/modules/sensors/: CMakeLists.txt  package.xml
src/obelix/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/obelix/launch/: launch.py  rviz2.py
src/obelix/obelix/: main.py
src/obelix/param/: obelix.in.yml  obelix.yml
src/obelix/params/: obelix.yml
src/panoramix/: package.xml  setup.cfg  setup.py
src/panoramix/panoramix/: app.py  main.py  panoramix.py
src/pharaon/: package.xml  setup.cfg  setup.py
src/pharaon/pharaon/: main.py  package.xml  setup.py
src/pharaon/pharaon_msgs/: CMakeLists.txt  package.xml
src/titan/: package.xml  setup.cfg  setup.py
src/titan/launch/: cloud-interfaces.py  core.py  interfaces.py  titan.py
src/titan/titan/: game_manager.py  pharaon.py  rviz2.py
(+256 files in other folders)
