<?xml version="1.0"?>
<package format="2">
  <name>asterix</name>
  <version>0.0.2</version>
  <description>Assurancetourix RO2 System</description>
  <maintainer email="ewen.brun@ecam.fr">Ewen BRUN</maintainer>
  <maintainer email="ewen.brun@ecam.fr">Ewen BRUN</maintainer>
  <license>Funtech Makers :: CDFR 2020 :: Equipe 1</license>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
