<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manual_command</name>
  <version>0.9.0</version>
  <description>Remote controller package for ECAM MAKERS robots</description>
  <maintainer email="phileas.lambert@gmail.com">Philéas LAMBERT</maintainer>
  <license>ECAM Makers :: CDFR 2022</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
