<?xml version="1.0"?>
<package format="2">
  <name>obelix</name>
  <version>0.1.0</version>
  <description>Obelix ROS2</description>
  <maintainer email="ewen.brun@ecam.fr">Ewen BRUN</maintainer>
  <license>ECAM Makers :: CDFR 2020</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
