<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assurancetourix</name>
  <version>0.9.0</version>
  <description>Assurancetourix package</description>
  <!--
  authors:
    Ewen BRUN: ewen.brun@ecam.fr
    Philéas LAMBERT: phileas.lambert@ecam.fr
  -->
  <maintainer email="phileas.lambert@ecam.fr">Philéas LAMBERT</maintainer>
  <license>ECAM Makers :: CDFR 2021</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>visualization_msgs</buildtool_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <buildtool_depend>tf2_ros</buildtool_depend>
  <buildtool_depend>tf2_geometry_msgs</buildtool_depend>
  <buildtool_depend>transformix_msgs</buildtool_depend>

  <depend>libopencv-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
