<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lh_enemies_tracker</name>
  <version>0.0.0</version>
  <description>Valve lighthouse 2.0 enemies tracker node</description>
  <maintainer email="phileas.lambert@gmail.com">Philéas LAMBERT</maintainer>
  <license>ECAM Makers :: CDFR 2022</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
