<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>strategix</name>
  <version>0.9.0</version>
  <description>Strategix package</description>
  <!--
  authors:
    Ewen BRUN: ewen.brun@ecam.fr
    Maximilien HIRTZ: maximilien.hirtz@ecam.fr
  -->
  <maintainer email="maximilien.hirtz@ecam.fr">Maximilien HIRTZ</maintainer>
  <license>ECAM Makers :: CDFR 2021</license>

  <buildtool_depend>transformix_msgs</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>lcd_msgs</exec_depend>
  <exec_depend>strategix_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
