<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>webots_positions</name>
  <version>0.1.0</version>
  <description>send back positions of elements of webots</description>
  <maintainer email="phileas.lambert@gmail.com">Philéas LAMBERT</maintainer>
  <license>ECAM Makers :: CDFR 2020</license>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
