<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>actuators</name>
  <version>0.8.1</version>
  <description>Actuators Hardware Interface</description>
  <maintainer email="ewen.brun@ecam.fr">Ewen BRUN</maintainer>

  <license>ECAM Makers :: CDFR 2020</license>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
