<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drive</name>
  <version>0.9.0</version>
  <description>Drive node</description>
  <!--
  authors:
    Ewen BRUN: ewen.brun@ecam.fr
    Philéas LAMBERT: phileas.lambert@ecam.fr
  -->
  <maintainer email="phileas.lambert@ecam.fr">Philéas LAMBERT</maintainer>
  <license>ECAM Makers :: CDFR 2021</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>transformix_msgs</buildtool_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>actuators_srvs</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
