<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>localisation</name>
  <version>0.8.3</version>
  <description>Robot localisation module</description>
  <maintainer email="phileas.lambert@ecam.fr">Philéas LAMBERT</maintainer>
  <license>ECAM Makers :: CDFR 2021</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
