<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map</name>
  <version>0.2.0</version>
  <description>Map package</description>
  <maintainer email="ewen.brun@ecam.fr">Ewen BRUN</maintainer>
  <license>Club Robotique ECAM :: CDFR 2020</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
