<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map</name>
  <version>0.9.0</version>
  <description>Map package</description>
  <!--
  authors:
    Ewen BRUN: ewen.brun@ecam.fr
    Philéas LAMBERT: phileas.lambert@ecam.fr
  -->
  <maintainer email="phileas.lambert@ecam.fr">Philéas LAMBERT</maintainer>
  <license>ECAM Makers :: CDFR 2021</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
